fix(ui): clamp pagination offset after list changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,11 @@
             <button type="submit">add task</button>
         </form>
         <ul id="taskList"></ul>
+        <div>
+            <button id="prevBtn">Prev</button>
+            <span id="pageInfo">Page 1</span>
+            <button id="nextBtn">Next</button>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
