--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,15 @@
             <button type="submit">add task</button>
         </form>
         <ul id="taskList"></ul>
+        <label>
+            Status:
+            <select id="statusFilter">
+                <option value="">All</option>
+                <option value="todo">todo</option>
+                <option value="in_progress">in_progress</option>
+                <option value="done">done</option>
+            </select>
+        </label>
         <div>
             <button id="prevBtn">Prev</button>
             <span id="pageInfo">Page 1</span>
