feat(ui): add sorting (title/status) with asc/desc order

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,22 @@
                 <option value="done">done</option>
             </select>
         </label>
+        <label>
+            Sort by:
+            <select id="sortBy">
+                <option value="title">title</option>
+                <option value="status">status</option>
+            </select>
+            </label>
+
+        <label>
+            Order:
+            <select id="sortOrder">
+                <option value="asc">asc</option>
+                <option value="desc">desc</option>
+            </select>
+        </label>
+
         <div>
             <button id="prevBtn">Prev</button>
             <span id="pageInfo">Page 1</span>
