feat(ui): add search by title with combined filter/sort/pagination

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,10 @@
                 <option value="desc">desc</option>
             </select>
         </label>
-
+        <label>
+            Search:
+            <input type="text" id="searchInput" placeholder="Search by title">
+        </label>
         <div>
             <button id="prevBtn">Prev</button>
             <span id="pageInfo">Page 1</span>
